fix: spacing issues

--- a/src/assets/styles/collections/_guidelines.css
+++ b/src/assets/styles/collections/_guidelines.css
@@ -124,6 +124,10 @@
     margin-inline: 1rem;
 }
 
+.strategy-processes.only-two a:first-of-type {
+    margin-inline-end: 1rem;
+}
+
 .guidelines search,
 .guidelines-search search {
 	display: flex;
